terratest/deploy/demo/fo_demo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    k8gb.io/strategy: failover
    k8gb.io/primary-geotag: eu
    k8gb.io/primary-geotag-order: eu,us,za
  name: ing
spec:
  ingressClassName: nginx
  rules:
  - host: demo.cloud.example.com
    http:
      paths:
      - backend:
          service:
            name: frontend-podinfo
            port:
              name: http
        path: /
        pathType: Prefix
